vlib/v/checker/tests/wrong_or_expr_err.vv
module main

fn main() {
	get_number := fn () ?i16 {
		return 1
	}
	println('${get_number() or { '1' }}')
}
